[package]
name = "mtcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.5"
futures = "0.3"
rand = "0.8"
